--- a/client/index.html
+++ b/client/index.html
@@ -26,57 +26,6 @@
   </header>
 
   <content>
-    <div id="illustrations" class="carousel slide" data-ride="carousel">
-      <ol class="carousel-indicators">
-        <li data-target="#illustrations" data-slide-to="0" class="active"></li>
-        <li data-target="#illustrations" data-slide-to="1"></li>
-        <li data-target="#illustrations" data-slide-to="2"></li>
-      </ol>
-      <div class="home-carousel carousel-inner">
-        <div class="carousel-item active">
-          <img src="./img/heather-ford-Fq54FqucgCE-unsplash.jpg">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Donuts</h5>
-            <p>Nice illustration by <a
-                href="https://unsplash.com/@the_modern_life_mrs?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Heather
-                Ford</a> on <a
-                href="https://unsplash.com/s/photos/colors?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a>
-            </p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="./img/izuddin-helmi-adnan-8VJDHw3daGk-unsplash.jpg">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Leafs</h5>
-            <p>Nice illustration by <a
-                href="https://unsplash.com/@izuddinhelmi?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Izuddin
-                Helmi Adnan</a> on <a
-                href="https://unsplash.com/s/photos/colors?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a>
-            </p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="./img/matthew-hamilton-BeeMMFF_jso-unsplash.jpg">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Red</h5>
-            <p>Nice illustration by <a
-                href="https://unsplash.com/@thatsmrbio?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Matthew
-                Hamilton</a> on <a
-                href="https://unsplash.com/s/photos/colors?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a>
-            </p>
-          </div>
-        </div>
-      </div>
-      <a class="carousel-control-prev" href="#illustrations" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#illustrations" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
-
     <div class="container-xl">
       <div class="my-5">
         <h1>Hi !</h1>
@@ -87,7 +36,11 @@
 
         <ul class="nav nav-tabs" id="myTab" role="tablist">
           <li class="nav-item">
-            <a class="nav-link active" id="dummy-form-tab" data-toggle="tab" href="#dummy-form" role="tab"
+            <a class="nav-link active" id="pictures-tab" data-toggle="tab" href="#pictures" role="tab"
+              aria-controls="pictures" aria-selected="false">Nice pics</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" id="dummy-form-tab" data-toggle="tab" href="#dummy-form" role="tab"
               aria-controls="dummy-form" aria-selected="true">Dummy form</a>
           </li>
           <li class="nav-item">
@@ -96,18 +49,71 @@
           </li>
         </ul>
 
-        <div class="tab-content m-3">
-          <div class="tab-pane fade show active" id="dummy-form" role="tabpanel" aria-labelledby="dummy-form-tab">
+        <div class="tab-content">
+          <div class="tab-pane fade show active" id="pictures" role="tabpanel" aria-labelledby="pictures-tab">
+            <div id="illustrations" class="carousel slide" data-ride="carousel">
+              <ol class="carousel-indicators">
+                <li data-target="#illustrations" data-slide-to="0" class="active"></li>
+                <li data-target="#illustrations" data-slide-to="1"></li>
+                <li data-target="#illustrations" data-slide-to="2"></li>
+              </ol>
+              <div class="home-carousel carousel-inner">
+                <div class="carousel-item active">
+                  <img src="./img/heather-ford-Fq54FqucgCE-unsplash.jpg">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5>Donuts</h5>
+                    <p>Nice illustration by <a
+                        href="https://unsplash.com/@the_modern_life_mrs?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Heather
+                        Ford</a> on <a
+                        href="https://unsplash.com/s/photos/colors?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a>
+                    </p>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <img src="./img/izuddin-helmi-adnan-8VJDHw3daGk-unsplash.jpg">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5>Leafs</h5>
+                    <p>Nice illustration by <a
+                        href="https://unsplash.com/@izuddinhelmi?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Izuddin
+                        Helmi Adnan</a> on <a
+                        href="https://unsplash.com/s/photos/colors?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a>
+                    </p>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <img src="./img/matthew-hamilton-BeeMMFF_jso-unsplash.jpg">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5>Red</h5>
+                    <p>Nice illustration by <a
+                        href="https://unsplash.com/@thatsmrbio?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Matthew
+                        Hamilton</a> on <a
+                        href="https://unsplash.com/s/photos/colors?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a>
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <a class="carousel-control-prev" href="#illustrations" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#illustrations" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
+            </div>
+          </div>
+
+          <div class="tab-pane fade m-3" id="dummy-form" role="tabpanel" aria-labelledby="dummy-form-tab">
             <div class="form-group">
               <div class="custom-control custom-switch">
-                <input type="checkbox" class="custom-control-input" id="customSwitch1">
-                <label class="custom-control-label" for="customSwitch1">Tick</label>
+                <input type="checkbox" class="custom-control-input" id="dummy-tick">
+                <label class="custom-control-label" for="dummy-tick">Tick</label>
               </div>
-              <small id="emailHelp" class="form-text text-muted">Is it done ?</small>
+              <small class="form-text text-muted">Is it done ?</small>
             </div>
             <div class="form-group">
               <label for="exampleFormControlSelect1">Choice</label>
-              <select class="form-control" id="exampleFormControlSelect1">
+              <select class="form-control" id="dummy-choice">
                 <option>1</option>
                 <option>2</option>
                 <option>3</option>
@@ -117,13 +123,13 @@
             </div>
             <div class="form-group">
               <label for="exampleFormControlTextarea1">Note</label>
-              <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+              <textarea class="form-control" id="dummy-note" rows="3"></textarea>
             </div>
-            <button class="btn btn-primary">Clicked 0 times</button>
-            <button class="btn btn-secondary">Reset</button>
+            <button class="btn btn-primary" id="dummy-click">Clicked 0 times</button>
+            <button class="btn btn-secondary" id="dummy-reset">Reset</button>
           </div>
 
-          <div class="tab-pane fade" id="compute" role="tabpanel" aria-labelledby="compute-tab">
+          <div class="tab-pane fade m-3" id="compute" role="tabpanel" aria-labelledby="compute-tab">
             <h5>Basics</h5>
             <div class="row">
               <div class="form-group col-12 col-sm">
@@ -131,7 +137,7 @@
                 <input type="text" class="form-control" id="input-a">
               </div>
               <div class="form-group col-12 col-sm-auto">
-                <label for="input-a">Op.</label>
+                <label for="input-op">Op.</label>
                 <select class="custom-select" id="input-op">
                   <option>+</option>
                   <option>-</option>
@@ -150,7 +156,6 @@
             </div>
           </div>
         </div>
-
       </div>
     </div>
   </content>
