--- a/client/index.html
+++ b/client/index.html
@@ -185,6 +185,7 @@
     integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
     crossorigin="anonymous"></script>
   <script src="app.js"></script>
+  <script type="text/javascript" src="sw-init.js"></script>
 </body>
 
 </html>
