--- a/client/index.html
+++ b/client/index.html
@@ -56,9 +56,21 @@
                 <li data-target="#illustrations" data-slide-to="0" class="active"></li>
                 <li data-target="#illustrations" data-slide-to="1"></li>
                 <li data-target="#illustrations" data-slide-to="2"></li>
+                <li data-target="#illustrations" data-slide-to="3"></li>
               </ol>
               <div class="home-carousel carousel-inner">
                 <div class="carousel-item active">
+                  <img src="./img/norris-niman-ePB2oGU8mb4-unsplash.jpg">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5>Minimal</h5>
+                    <p>Nice illustration by <a
+                        href="https://unsplash.com/@norrisniman?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Norris
+                        Niman</a> on <a
+                        href="https://unsplash.com/s/photos/minimalist?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a>
+                    </p>
+                  </div>
+                </div>
+                <div class="carousel-item">
                   <img src="./img/heather-ford-Fq54FqucgCE-unsplash.jpg">
                   <div class="carousel-caption d-none d-md-block">
                     <h5>Donuts</h5>
