--- a/client/index.html
+++ b/client/index.html
@@ -14,6 +14,8 @@
 
   <link rel="icon" href="/img/icon-badge.svg">
   <title>min_pwa</title>
+
+  <link rel="manifest" href="/manifest.webmanifest">
 </head>
 
 <body>
@@ -37,7 +39,8 @@
     <div class="container-xl">
       <div class="my-5">
         <h1>Hi !</h1>
-        <p class="lead">This app is a <a href="https://fr.wikipedia.org/wiki/Progressive_web_app">PWA</a> techno trial
+        <p class="lead">This app is a <a target="_blank"
+            href="https://fr.wikipedia.org/wiki/Progressive_web_app">PWA</a> techno trial
         </p>
         <p>It's designed to fully work offline.</p>
       </div>
@@ -73,9 +76,9 @@
                   <img src="./img/norris-niman-ePB2oGU8mb4-unsplash.jpg">
                   <div class="carousel-caption d-none d-md-block">
                     <h5>Minimal</h5>
-                    <p>Nice illustration by <a
+                    <p>Nice illustration by <a target="_blank"
                         href="https://unsplash.com/@norrisniman?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Norris
-                        Niman</a> on <a
+                        Niman</a> on <a target="_blank"
                         href="https://unsplash.com/s/photos/minimalist?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a>
                     </p>
                   </div>
@@ -84,9 +87,9 @@
                   <img src="./img/heather-ford-Fq54FqucgCE-unsplash.jpg">
                   <div class="carousel-caption d-none d-md-block">
                     <h5>Donuts</h5>
-                    <p>Nice illustration by <a
+                    <p>Nice illustration by <a target="_blank"
                         href="https://unsplash.com/@the_modern_life_mrs?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Heather
-                        Ford</a> on <a
+                        Ford</a> on <a target="_blank"
                         href="https://unsplash.com/s/photos/colors?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a>
                     </p>
                   </div>
@@ -95,9 +98,9 @@
                   <img src="./img/izuddin-helmi-adnan-8VJDHw3daGk-unsplash.jpg">
                   <div class="carousel-caption d-none d-md-block">
                     <h5>Leafs</h5>
-                    <p>Nice illustration by <a
+                    <p>Nice illustration by <a target="_blank"
                         href="https://unsplash.com/@izuddinhelmi?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Izuddin
-                        Helmi Adnan</a> on <a
+                        Helmi Adnan</a> on <a target="_blank"
                         href="https://unsplash.com/s/photos/colors?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a>
                     </p>
                   </div>
@@ -106,9 +109,9 @@
                   <img src="./img/matthew-hamilton-BeeMMFF_jso-unsplash.jpg">
                   <div class="carousel-caption d-none d-md-block">
                     <h5>Red</h5>
-                    <p>Nice illustration by <a
+                    <p>Nice illustration by <a target="_blank"
                         href="https://unsplash.com/@thatsmrbio?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Matthew
-                        Hamilton</a> on <a
+                        Hamilton</a> on <a target="_blank"
                         href="https://unsplash.com/s/photos/colors?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a>
                     </p>
                   </div>
@@ -186,7 +189,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col">
-          <div class="my-3"><a class="btn btn-outline-secondary btn-sm"
+          <div class="my-3"><a class="btn btn-outline-secondary btn-sm" target="_blank"
               href="https://github.com/VivienGaluchot/min_pwa"><i class="fab fa-github-alt"></i> Open source project</a>
           </div>
         </div>
