fix service worker

--- a/client/index.html
+++ b/client/index.html
@@ -192,7 +192,10 @@
           </div>
         </div>
         <div class="col-auto">
-          <div class="my-3"><img src="/img/logo-black.svg" style="height: 1rem; opacity: .5;"></div>
+          <div class="my-3">
+            <small class="mh-1 text-muted">sw version <span id="sw-version"></span></small>
+            <img src="/img/logo-black.svg" style="height: 1rem; opacity: .5;">
+          </div>
         </div>
       </div>
     </div>
@@ -208,7 +211,6 @@
     integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
     crossorigin="anonymous"></script>
   <script src="app.js"></script>
-  <script type="text/javascript" src="sw-init.js"></script>
 </body>
 
 </html>
