--- a/client/index.html
+++ b/client/index.html
@@ -150,7 +150,8 @@
               <label for="exampleFormControlTextarea1">Note</label>
               <textarea class="form-control" id="dummy-note" rows="3"></textarea>
             </div>
-            <button class="btn btn-primary" id="dummy-click">Clicked 0 times</button>
+            <button class="btn btn-primary" id="dummy-click">Clicked <span id="dummy-click-count">-</span>
+              times</button>
             <button class="btn btn-secondary" id="dummy-reset">Reset</button>
           </div>
 
